--- a/cppIntegration_vs2015.vcxproj
+++ b/cppIntegration_vs2015.vcxproj
@@ -31,17 +31,18 @@
   <PropertyGroup>
     <ConfigurationType>Application</ConfigurationType>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
     <UseDebugLibraries>true</UseDebugLibraries>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
-    <Import Project="$(CUDAPropsPath)\CUDA 8.0.props" />
+    <Import Project="$(CUDAPropsPath)\CUDA 9.2.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets">
     <Import Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" />
@@ -61,18 +62,18 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>WIN32;_MBCS;NOMINMAX;ASSETS_DIR=R"($(AF_PATH)/examples/assets)";%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>./;$(CudaToolkitDir)/include;C:\ProgramData\NVIDIA Corporation\CUDA Samples\v8.0\common\inc;$(TBBROOT)\include;D:\Victor\Intel\tbb2017_20160722oss_win\tbb2017_20160722oss\examples\graph\fgbzip2;D:\Victor\FooState\AlgorithmPerformance\TBBandCUDA\clRNG-1.0.0-beta-Windows64\clRNG-1.0.0-beta-Windows64\include;$(AF_PATH)\include;D:\Victor\OpenCL\clRNG\src\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>./;$(CudaToolkitDir)/include;C:\ProgramData\NVIDIA Corporation\CUDA Samples\v9.2\common\inc;$(TBBROOT)\include;D:\Victor\Intel\tbb2017_20160722oss_win\tbb2017_20160722oss\examples\graph\fgbzip2;D:\Victor\FooState\AlgorithmPerformance\TBBandCUDA\clRNG-1.0.0-beta-Windows64\clRNG-1.0.0-beta-Windows64\include;$(AF_PATH)\include;D:\Victor\OpenCL\clRNG\src\include;C:\Program Files (x86)\IntelSWTools\compilers_and_libraries_2017.2.187\windows\ipp\include;C:\Program Files (x86)\IntelSWTools\compilers_and_libraries_2017.2.187\windows\mkl\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>curand.lib;cudart_static.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;tbb.lib;OpenCL.lib;clRNG.lib;afopencl.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(CudaToolkitLibDir);$(TBBROOT)\lib\intel64\vc14;D:\Victor\Intel\tbb2017_20160722oss_win\tbb2017_20160722oss\examples\graph\fgbzip2;C:\Program Files (x86)\Intel\OpenCL SDK\6.3\lib\x64;D:\Victor\FooState\AlgorithmPerformance\TBBandCUDA\clRNG-1.0.0-beta-Windows64\clRNG-1.0.0-beta-Windows64\lib64\import;$(AF_PATH)\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>curand.lib;cudart_static.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;tbb.lib;OpenCL.lib;clRNG.lib;afopencl.lib;ippcore.lib;ipps.lib;mkl_core.lib;mkl_intel_lp64.lib;mkl_sequential.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(CudaToolkitLibDir);$(TBBROOT)\lib\intel64\vc14;D:\Victor\Intel\tbb2017_20160722oss_win\tbb2017_20160722oss\examples\graph\fgbzip2;C:\Program Files (x86)\Intel\OpenCL SDK\6.3\lib\x64;D:\Victor\FooState\AlgorithmPerformance\TBBandCUDA\clRNG-1.0.0-beta-Windows64\clRNG-1.0.0-beta-Windows64\lib64\import;$(AF_PATH)\lib;C:\Program Files (x86)\IntelSWTools\compilers_and_libraries_2017.2.187\windows\ipp\lib\intel64_win;C:\Program Files (x86)\IntelSWTools\compilers_and_libraries_2017.2.187\windows\mkl\lib\intel64_win</AdditionalLibraryDirectories>
       <OutputFile>$(OutDir)/cppIntegration.exe</OutputFile>
     </Link>
     <CudaCompile>
-      <CodeGeneration>compute_20,sm_20;compute_30,sm_30;compute_35,sm_35;compute_37,sm_37;compute_50,sm_50;compute_52,sm_52;compute_60,sm_60;</CodeGeneration>
+      <CodeGeneration>compute_30,compute_30;</CodeGeneration>
       <AdditionalOptions>-Xcompiler "/wd 4819" %(AdditionalOptions)</AdditionalOptions>
-      <Include>./;C:\ProgramData\NVIDIA Corporation\CUDA Samples\v8.0\common\inc</Include>
+      <Include>./;C:\ProgramData\NVIDIA Corporation\CUDA Samples\v9.2\common\inc</Include>
       <Defines>WIN32</Defines>
     </CudaCompile>
   </ItemDefinitionGroup>
@@ -140,6 +141,6 @@
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="$(CUDAPropsPath)\CUDA 8.0.targets" />
+    <Import Project="$(CUDAPropsPath)\CUDA 9.2.targets" />
   </ImportGroup>
 </Project>
