--- a/cppIntegration_vs2015.vcxproj
+++ b/cppIntegration_vs2015.vcxproj
@@ -112,6 +112,8 @@
     <ClCompile Include="asyncNodeExample.cpp" />
     <ClCompile Include="asyncNodeGenerate.cpp" />
     <ClCompile Include="clRngExample.cpp" />
+    <ClCompile Include="ComputeThreadCpu.cpp" />
+    <ClCompile Include="ComputeThreadCudaGpu.cpp" />
     <ClCompile Include="ComputeThreads.cpp" />
     <ClCompile Include="flowGraphExamples.cpp" />
     <ClCompile Include="OpenClHelloWorld.cpp" />
