--- a/HeteroParallel.vcxproj
+++ b/HeteroParallel.vcxproj
@@ -15,8 +15,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{2F33389B-212A-47CD-90BA-7D3F8A2B0A7F}</ProjectGuid>
-    <RootNamespace>cppIntegration_vs2015</RootNamespace>
-    <ProjectName>cppIntegration</ProjectName>
+    <RootNamespace>HeteroParallel</RootNamespace>
+    <ProjectName>HeteroParallel</ProjectName>
     <CudaToolkitCustomDir />
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -68,7 +68,7 @@
       <SubSystem>Console</SubSystem>
       <AdditionalDependencies>curand.lib;cudart_static.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;tbb.lib;OpenCL.lib;clRNG.lib;afopencl.lib;ippcore.lib;ipps.lib;mkl_core.lib;mkl_intel_lp64.lib;mkl_sequential.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(CudaToolkitLibDir);$(TBBROOT)\lib\intel64\vc14;D:\Victor\Intel\tbb2017_20160722oss_win\tbb2017_20160722oss\examples\graph\fgbzip2;C:\Program Files (x86)\Intel\OpenCL SDK\6.3\lib\x64;D:\Victor\FooState\AlgorithmPerformance\TBBandCUDA\clRNG-1.0.0-beta-Windows64\clRNG-1.0.0-beta-Windows64\lib64\import;$(AF_PATH)\lib;C:\Program Files (x86)\IntelSWTools\compilers_and_libraries_2017.2.187\windows\ipp\lib\intel64_win;C:\Program Files (x86)\IntelSWTools\compilers_and_libraries_2017.2.187\windows\mkl\lib\intel64_win</AdditionalLibraryDirectories>
-      <OutputFile>$(OutDir)/cppIntegration.exe</OutputFile>
+      <OutputFile>$(OutDir)/HeteroParallel.exe</OutputFile>
     </Link>
     <CudaCompile>
       <CodeGeneration>compute_30,compute_30;</CodeGeneration>
