--- a/HeteroParallel.vcxproj
+++ b/HeteroParallel.vcxproj
@@ -112,6 +112,7 @@
     <ClCompile Include="asyncNodeExample.cpp" />
     <ClCompile Include="clRngExample.cpp" />
     <ClCompile Include="ComputeThreadCpu.cpp" />
+    <ClCompile Include="ComputeThreadOpenclGpu.cpp" />
     <ClCompile Include="ComputeThreadCudaGpu.cpp" />
     <ClCompile Include="ComputeThreads.cpp" />
     <ClCompile Include="flowGraphExamples.cpp" />
@@ -126,6 +127,7 @@
     <CudaCompile Include="radixSortThrust.cu" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ArrayFireSupport.h" />
     <ClInclude Include="asyncNodeGenerator.h" />
     <ClInclude Include="CudaSupport.h" />
     <ClInclude Include="utils.h" />
