CPU sorting of work items is working - being verified per work item with results sorted.

--- a/HeteroParallel.vcxproj
+++ b/HeteroParallel.vcxproj
@@ -132,7 +132,11 @@
   <ItemGroup>
     <ClInclude Include="ArrayFireSupport.h" />
     <ClInclude Include="asyncNodeGenerator.h" />
+    <ClInclude Include="BinarySearch.h" />
     <ClInclude Include="CudaSupport.h" />
+    <ClInclude Include="InsertionSort.h" />
+    <ClInclude Include="ParallelMerge.h" />
+    <ClInclude Include="ParallelMergeSort.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
