--- a/HeteroParallel.vcxproj
+++ b/HeteroParallel.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="CudaRandom.cpp" />
     <ClCompile Include="main.cpp" />
     <CudaCompile Include="radixSortThrust.cu" />
+    <CudaCompile Include="radixSortThrustExample.cu" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ArrayFireSupport.h" />
